--- a/ejercicio1/ejemplo1.html
+++ b/ejercicio1/ejemplo1.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hola</title>
 </head>
+
 <body>
-    
+    <img src="imagen.jpg" alt="It's halloween">
+    <br>
+    <input type="text">
 </body>
+
 </html>
