--- a/Etiquetas_texto_3_2/index.html
+++ b/Etiquetas_texto_3_2/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Elemento <a>-->
     <a href="https://www.eniun.com" target="_blank">Esto es un hiperenlace</a>
-    <a href="../Etiquetas_contenido_3_1/index.html" target="_blank">Esto es un hiperenlace</a>
+    <a href="../Etiquetas_contenido_3_1/index.html" target="_self">Esto es un hiperenlace</a>
 
     <!-- Elemento <em>-->
     <em>Esto es un texto enfatizado.</em>
