--- a/Etiquetas_texto_3_2/index.html
+++ b/Etiquetas_texto_3_2/index.html
@@ -13,7 +13,14 @@
     <!-- Elemento <a>-->
     <a href="https://www.eniun.com" target="_blank">Esto es un hiperenlace</a>
     <a href="../Etiquetas_contenido_3_1/index.html" target="_self">Esto es un hiperenlace</a>
-
+    <!-- Enviar un correo con mailto-->
+     <br>
+    <a href="mailto:info@eniun.com">Enviar correo a Eniun</a><br>
+    <!-- Llamar por teléfono con tel-->
+    <a href="tel:+34666666666">Llamar por teléfono a 666 666 666</a>
+    <br>
+    <a href="CALENDARIO ABUELA.pdf" download="CALENDARIO ABUELA 1.pdf">Descargar PDF</a>
+    <br>
     <!-- Elemento <em>-->
     <em>Esto es un texto enfatizado.</em>
 
