--- a/Etiquetas_formularios_4_2/index.html
+++ b/Etiquetas_formularios_4_2/index.html
@@ -2,18 +2,24 @@
     <fieldset>
         <legend>Datos personales</legend>
         <label for="nombre">Nombre y apellidos: </label>
-        <input id="nombre" type="text" minlength="5" maxlength="30"><br>
+        <input id="nombre" type="text" required minlength="5" maxlength="30" placeholder="Introduzca su nombre"><br>
 
         <label for="sexo">Sexo: </label>
-        <select id="sexo">
+        <select id="sexo" required>
             <!--Etiqueta option-->
-            <option value="value1">Hombre</option>
-            <option value="value2" selected>Mujer</option>
+            <option disabled selected hidden>Selecciona una opcion</option>
+            <option value="H">Hombre</option>
+            <option value="M">Mujer</option>
+            <option value="O">otro</option>
+
         </select><br><br>
         <label>Edad: </label>
         <input type="checkbox" value="20-39"> 20-39
         <input type="checkbox" value="40-59"> 40-59
         <input type="checkbox" value="60-79"> 60-79<br><br>
+
+        <label>Edad: </label>
+            <input type="radio" id="rango1" name="contact" value="20-39"
 
         <label for="email">Email: </label>
         <input id="email" type="email"><br><br>
