--- a/Etiquetas_formularios_4_2/index.html
+++ b/Etiquetas_formularios_4_2/index.html
@@ -2,7 +2,11 @@
     <fieldset>
         <legend>Datos personales</legend>
         <label for="nombre">Nombre y apellidos: </label>
-        <input id="nombre" type="text" required minlength="5" maxlength="30" placeholder="Introduzca su nombre"><br>
+        <input id="nombre" 
+        type="text" 
+        required minlength="5" 
+        maxlength="30" 
+        placeholder="Introduzca su nombre"><br>
 
         <label for="sexo">Sexo: </label>
         <select id="sexo" required>
@@ -17,12 +21,59 @@
         <input type="checkbox" value="20-39"> 20-39
         <input type="checkbox" value="40-59"> 40-59
         <input type="checkbox" value="60-79"> 60-79<br><br>
-
+    </fieldset>
+    <fieldset>
         <label>Edad: </label>
-            <input type="radio" id="rango1" name="contact" value="20-39"
+        <input type="radio" id="rango1" name="contact" value="20-39"> 20-39
+        <input type="radio" id="rango1" name="contact" value="40-59"> 40-59
+        <input type="radio" id="rango1" name="contact" value="60-79"> 60-79<br><br>
 
         <label for="email">Email: </label>
-        <input id="email" type="email"><br><br>
+        <input id="email" 
+        type="email" 
+        name="email" 
+        required 
+        placeholder="correo@ejemplo.es"
+        pattern=".+@g\.educaand\.es" 
+        title="Introduce tu correo de @g.educaand.es">
+        <br><br>
+
+        <label for="tel">Tlf: </label>
+        <input id="tel" 
+        maxlength="15"
+        type="tel" 
+        name="tel" 
+        required 
+        placeholder="+34 123456789"
+        pattern="\+[0-9]{2}\s\d{9}" 
+        title="Introduce tu numero de tlf">
+        <br><br>
+
+        <label for="direccion">Dirección: </label>
+        <textarea id="direccion" 
+        name="direccion" 
+        maxlength="300"></textarea>
+        <br><br>
+        <label for="pass">Contraseña</label>
+        <input type="password"
+        id="password"
+        name="password"
+        placeholder="Introduce la contraseña"
+        minlength="8"
+        required
+        pattern=""
+        title="">
+        <br><br>
+        <label for="password">Repite Contraseña</label>
+        <input type="password"
+        id="password"
+        name="password"
+        placeholder="Introduce la contraseña"
+        minlength="8"
+        required
+        pattern=""
+        title="">
+        <br><br>
 
         <label for="estudios">Estudios: </label>
         <select id="estudios">
