--- a/Etiquetas_formularios_4_2/index.html
+++ b/Etiquetas_formularios_4_2/index.html
@@ -64,7 +64,7 @@
         pattern=""
         title="">
         <br><br>
-        <label for="password">Repite Contraseña</label>
+        <label for="password_r">Repite Contraseña</label>
         <input type="password"
         id="password"
         name="password"
