--- a/CSS_Inicial/Selectores/index.html
+++ b/CSS_Inicial/Selectores/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -21,23 +22,23 @@
             <h2>Productos</h2>
             <article>
                 <h3>Producto 1</h3>
-                <img src="../Selectores/img/flower-9203759_1280.webp" alt="imagen" width="300" height="400">
+                <img src="../Selectores/img/flower-9203759_1280.webp" alt="imagen">
                 <p></p>
             </article>
             <article>
                 <h3>Producto 2</h3>
-                <img src="../Selectores/img/holly-7590229_1280.webp" alt="imagen" width="400" height="300">
+                <img src="../Selectores/img/holly-7590229_1280.webp" alt="imagen">
                 <p></p>
             </article>
         </section>
     </main>
     <aside>
-        <section>
+        <section class="borde_redondo">
             <h3>Opiniones</h3>
-            <p></p>
-            <p></p>
+            <p>Me gusta mucho esta pagina</p>
+            <p>Me gusta muchisimo esta pagina</p>
         </section>
-        <section>
+        <section class="borde_redondo">
             <h3>Mas visitados</h3>
             <nav>
                 <ul>
@@ -48,7 +49,7 @@
             </nav>
         </section>
     </aside>
-    <footer>
+    <footer id="pie">
         <h4>Redes sociales</h4>
         <nav>
             <ul>
