--- a/CSS_Inicial/Selectores/index.html
+++ b/CSS_Inicial/Selectores/index.html
@@ -2,9 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <header>
