--- a/CSS_Inicial/Menu_con_transiciones/index.html
+++ b/CSS_Inicial/Menu_con_transiciones/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a class="menu servicios" href="#" data-title="Servicios"><span>
-                    <span>Servicios</span>
+                    <span>servicios1</span>
                   </span></a></li>
                 <li><a class="menu proyectos" href="#" data-title="Proyectos">
                   <span>
