--- a/CSS_Inicial/Unidades_medida/index.html
+++ b/CSS_Inicial/Unidades_medida/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Unidades de medida</title>
 </head>
 <body>
     <div class="contenedor">
         <div class="centrado">
-            <i class="fas fa-star"></i>
-          <p>Texto Centrado</p>
+            <i class="fas fa-solid fa-bicycle fa-3x fa-bici"></i>          
+            <p>Texto Centrado</p>
         </div>
       </div>
 </body>
