--- a/CSS_Inicial/Estilos_Formulario/index.html
+++ b/CSS_Inicial/Estilos_Formulario/index.html
@@ -11,8 +11,11 @@
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre">
      
-        <label for="email">Email:</label>
+        <label for="email" class="required">Email:</label>
         <input type="email" id="email" name="email">
+
+        <h2>Ejemplo de Textarea con resize</h2>
+    <textarea placeholder="Escribe aquí..."></textarea>
      
         <input type="submit" value="Enviar">
      </form>
