--- a/CSS_Inicial/Inputs_formularios/index.html
+++ b/CSS_Inicial/Inputs_formularios/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" crossorigin="anonymous">
-    <title>Ejemplo de iconos</title>
+    <title>Ejemplo de iconoss</title>
 </head>
 <body>
     <form>
